RESOLVED FIXED83660
[chromium] ImageBuffer minor style fix: remove compound declaration
https://bugs.webkit.org/show_bug.cgi?id=83660
Summary [chromium] ImageBuffer minor style fix: remove compound declaration
noel gordon
Reported 2012-04-10 20:24:22 PDT
[chromium] ImageBuffer minor style fix: remove compound declaration
Attachments
Patch (2.24 KB, patch)
2012-04-10 20:24 PDT, noel gordon
no flags
noel gordon
Comment 1 2012-04-10 20:24:49 PDT
Kent Tamura
Comment 2 2012-04-10 20:45:43 PDT
Comment on attachment 136616 [details] Patch ok
WebKit Review Bot
Comment 3 2012-04-10 22:35:33 PDT
Comment on attachment 136616 [details] Patch Clearing flags on attachment: 136616 Committed r113828: <http://trac.webkit.org/changeset/113828>
WebKit Review Bot
Comment 4 2012-04-10 22:35:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.