[chromium] ImageBuffer minor style fix: remove compound declaration https://bugs.webkit.org/show_bug.cgi?id=83660

Reviewed by Kent Tamura.

No new tests. Covered by existing fast/canvas/*toDataURL* tests.

* platform/graphics/skia/ImageBufferSkia.cpp:
(WebCore::ImageBuffer::toDataURL):
(WebCore::ImageDataToDataURL):


Canonical link: https://commits.webkit.org/101126@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113828 268f45cc-cd09-0410-ab3c-d52691b4dbfc